# Algorithm-Analysis-Tool

./: .gitignore  arithmetic_test_code.py  asr_test.py  ast_test.py  bubble_sort.py  pyproject.toml  readme.md  requirements.txt  run_streamlit.sh  to-decide.md  to-do.md  to-do.txt
src/: readme.md
src/algorithm_analysis_tool/: __init__.py  algorithms.py  arithmetic_test_code.py  ast_helpers.py  ast_visitor.py  bubble_sort.py  cli.py  config.py  execution_session.py  function_visitor.py  init.py  merge_sort.py  readme.md  to-do.txt
src/streamlit_app/: app.py  helpers.py  navigation.py  readme.md  streamlit_app.md  to-consider.md
src/streamlit_app/pages/: multi_execution.py  single_execution.py  test_page.py
src/test_code/: ast_test.py  ast_translater.py  next-steps.txt  none_compiled_ast.py  readme.md  tree.json
tests/: test_ast_visitor.py  test_execution_session.py  test_instrumentation.py  test_system.py  test_visitor.py
